assignment2/src/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Break'", "'Foreach'", "'Boolean'", "'Null'", 
                     "'Continue'", "'True'", "'String'", "'If'", "'False'", 
                     "'Elseif'", "'Array'", "'Int'", "'Else'", "'Float'", 
                     "'Var'", "'Val'", "'Return'", "'New'", "'In'", "'By'", 
                     "'Class'", "'Constructor'", "'Destructor'", "'Self'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'||'", "'&&'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'='", 
                     "'==.'", "'+.'", "'..'", "'.'", "'('", "')'", "'{'", 
                     "'}'", "';'", "'['", "']'", "'::'", "':'", "','" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "STRING", "COMMENT", 
                      "BREAKTYPE", "FOREACHTYPE", "BOOLEANTYPE", "NULLTYPE", 
                      "CONTINUETYPE", "TRUETYPE", "STRINGTYPE", "IF", "FALSETYPE", 
                      "ELSEIF", "ARRAYTYPE", "INTTYPE", "ELSE", "FLOATTYPE", 
                      "VARTYPE", "CONSTTYPE", "RETURNTYPE", "NEW", "INKEY", 
                      "BYKEY", "CLASSTYPE", "CONSTRUCTORTYPE", "DESTRUCTORTYPE", 
                      "SELFTYPE", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", 
                      "OR", "AND", "EQUAL", "NOTEQUAL", "LESS", "GREATER", 
                      "LESSEQUAL", "GREATEREQUAL", "ASSIGN", "STRINGEQUAL", 
                      "CONCATENATION", "DOTDOT", "DOT", "LB", "RB", "LP", 
                      "RP", "SEMI", "LSB", "RSB", "TWOCOLON", "COLON", "COMMA", 
                      "DOLLAR_ID", "ID", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_TOKEN" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_lhs = 2
    RULE_scalavar = 3
    RULE_ifstatement = 4
    RULE_forstatement = 5
    RULE_breakstatement = 6
    RULE_continuestatement = 7
    RULE_returnstatement = 8
    RULE_invokemethod = 9
    RULE_partinvoke = 10
    RULE_blockstatement = 11
    RULE_exp = 12
    RULE_exp1 = 13
    RULE_exp2 = 14
    RULE_exp3 = 15
    RULE_exp4 = 16
    RULE_exp5 = 17
    RULE_exp6 = 18
    RULE_exp7 = 19
    RULE_exp8 = 20
    RULE_exp9 = 21
    RULE_exp10 = 22
    RULE_operands = 23
    RULE_paramexp = 24
    RULE_indexop = 25
    RULE_classname = 26
    RULE_memclass = 27
    RULE_construct = 28
    RULE_destruct = 29
    RULE_method = 30
    RULE_parameters = 31
    RULE_idlist = 32
    RULE_attr = 33
    RULE_idattr = 34
    RULE_vardecl = 35
    RULE_explist = 36
    RULE_datatype = 37
    RULE_arraynested = 38
    RULE_multiarrayindex = 39
    RULE_arrayindex = 40
    RULE_indexlist = 41
    RULE_value = 42
    RULE_booln = 43

    ruleNames =  [ "program", "statement", "lhs", "scalavar", "ifstatement", 
                   "forstatement", "breakstatement", "continuestatement", 
                   "returnstatement", "invokemethod", "partinvoke", "blockstatement", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "exp8", "exp9", "exp10", "operands", "paramexp", 
                   "indexop", "classname", "memclass", "construct", "destruct", 
                   "method", "parameters", "idlist", "attr", "idattr", "vardecl", 
                   "explist", "datatype", "arraynested", "multiarrayindex", 
                   "arrayindex", "indexlist", "value", "booln" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    STRING=3
    COMMENT=4
    BREAKTYPE=5
    FOREACHTYPE=6
    BOOLEANTYPE=7
    NULLTYPE=8
    CONTINUETYPE=9
    TRUETYPE=10
    STRINGTYPE=11
    IF=12
    FALSETYPE=13
    ELSEIF=14
    ARRAYTYPE=15
    INTTYPE=16
    ELSE=17
    FLOATTYPE=18
    VARTYPE=19
    CONSTTYPE=20
    RETURNTYPE=21
    NEW=22
    INKEY=23
    BYKEY=24
    CLASSTYPE=25
    CONSTRUCTORTYPE=26
    DESTRUCTORTYPE=27
    SELFTYPE=28
    ADD=29
    SUB=30
    MUL=31
    DIV=32
    MOD=33
    NOT=34
    OR=35
    AND=36
    EQUAL=37
    NOTEQUAL=38
    LESS=39
    GREATER=40
    LESSEQUAL=41
    GREATEREQUAL=42
    ASSIGN=43
    STRINGEQUAL=44
    CONCATENATION=45
    DOTDOT=46
    DOT=47
    LB=48
    RB=49
    LP=50
    RP=51
    SEMI=52
    LSB=53
    RSB=54
    TWOCOLON=55
    COLON=56
    COMMA=57
    DOLLAR_ID=58
    ID=59
    WS=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62
    ERROR_TOKEN=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def classname(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassnameContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassnameContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.classname()
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASSTYPE):
                    break

            self.state = 93
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs(self):
            return self.getTypedRuleContext(D96Parser.LhsContext,0)


        def ifstatement(self):
            return self.getTypedRuleContext(D96Parser.IfstatementContext,0)


        def forstatement(self):
            return self.getTypedRuleContext(D96Parser.ForstatementContext,0)


        def returnstatement(self):
            return self.getTypedRuleContext(D96Parser.ReturnstatementContext,0)


        def invokemethod(self):
            return self.getTypedRuleContext(D96Parser.InvokemethodContext,0)


        def continuestatement(self):
            return self.getTypedRuleContext(D96Parser.ContinuestatementContext,0)


        def breakstatement(self):
            return self.getTypedRuleContext(D96Parser.BreakstatementContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(D96Parser.VardeclContext,0)


        def blockstatement(self):
            return self.getTypedRuleContext(D96Parser.BlockstatementContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = D96Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.lhs()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.ifstatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.forstatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.returnstatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 99
                self.invokemethod()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 100
                self.continuestatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 101
                self.breakstatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 102
                self.vardecl()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 103
                self.blockstatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LhsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(D96Parser.ExpContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def scalavar(self):
            return self.getTypedRuleContext(D96Parser.ScalavarContext,0)


        def exp8(self):
            return self.getTypedRuleContext(D96Parser.Exp8Context,0)


        def indexop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IndexopContext)
            else:
                return self.getTypedRuleContext(D96Parser.IndexopContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_lhs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLhs" ):
                return visitor.visitLhs(self)
            else:
                return visitor.visitChildren(self)




    def lhs(self):

        localctx = D96Parser.LhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_lhs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 106
                self.scalavar()
                pass

            elif la_ == 2:
                self.state = 107
                self.exp8(0)
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 108
                    self.indexop()
                    self.state = 111 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==D96Parser.LSB):
                        break

                pass


            self.state = 115
            self.match(D96Parser.ASSIGN)
            self.state = 116
            self.exp()
            self.state = 117
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScalavarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def exp8(self):
            return self.getTypedRuleContext(D96Parser.Exp8Context,0)


        def DOT(self):
            return self.getToken(D96Parser.DOT, 0)

        def TWOCOLON(self):
            return self.getToken(D96Parser.TWOCOLON, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_scalavar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScalavar" ):
                return visitor.visitScalavar(self)
            else:
                return visitor.visitChildren(self)




    def scalavar(self):

        localctx = D96Parser.ScalavarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_scalavar)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(D96Parser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.exp8(0)
                self.state = 121
                self.match(D96Parser.DOT)
                self.state = 122
                self.match(D96Parser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(D96Parser.ID)
                self.state = 125
                self.match(D96Parser.TWOCOLON)
                self.state = 126
                self.match(D96Parser.DOLLAR_ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(D96Parser.IF, 0)

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.LB)
            else:
                return self.getToken(D96Parser.LB, i)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExpContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExpContext,i)


        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.RB)
            else:
                return self.getToken(D96Parser.RB, i)

        def blockstatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.BlockstatementContext)
            else:
                return self.getTypedRuleContext(D96Parser.BlockstatementContext,i)


        def ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ELSEIF)
            else:
                return self.getToken(D96Parser.ELSEIF, i)

        def ELSE(self):
            return self.getToken(D96Parser.ELSE, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_ifstatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstatement" ):
                return visitor.visitIfstatement(self)
            else:
                return visitor.visitChildren(self)




    def ifstatement(self):

        localctx = D96Parser.IfstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifstatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(D96Parser.IF)
            self.state = 130
            self.match(D96Parser.LB)
            self.state = 131
            self.exp()
            self.state = 132
            self.match(D96Parser.RB)
            self.state = 133
            self.blockstatement()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.ELSEIF:
                self.state = 134
                self.match(D96Parser.ELSEIF)
                self.state = 135
                self.match(D96Parser.LB)
                self.state = 136
                self.exp()
                self.state = 137
                self.match(D96Parser.RB)
                self.state = 138
                self.blockstatement()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ELSE:
                self.state = 145
                self.match(D96Parser.ELSE)
                self.state = 146
                self.blockstatement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForstatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOREACHTYPE(self):
            return self.getToken(D96Parser.FOREACHTYPE, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def scalavar(self):
            return self.getTypedRuleContext(D96Parser.ScalavarContext,0)


        def INKEY(self):
            return self.getToken(D96Parser.INKEY, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExpContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExpContext,i)


        def DOTDOT(self):
            return self.getToken(D96Parser.DOTDOT, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockstatement(self):
            return self.getTypedRuleContext(D96Parser.BlockstatementContext,0)


        def BYKEY(self):
            return self.getToken(D96Parser.BYKEY, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_forstatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForstatement" ):
                return visitor.visitForstatement(self)
            else:
                return visitor.visitChildren(self)




    def forstatement(self):

        localctx = D96Parser.ForstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_forstatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(D96Parser.FOREACHTYPE)
            self.state = 150
            self.match(D96Parser.LB)
            self.state = 151
            self.scalavar()
            self.state = 152
            self.match(D96Parser.INKEY)
            self.state = 153
            self.exp()
            self.state = 154
            self.match(D96Parser.DOTDOT)
            self.state = 155
            self.exp()
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.BYKEY:
                self.state = 156
                self.match(D96Parser.BYKEY)
                self.state = 157
                self.exp()


            self.state = 160
            self.match(D96Parser.RB)
            self.state = 161
            self.blockstatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakstatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAKTYPE(self):
            return self.getToken(D96Parser.BREAKTYPE, 0)

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_breakstatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakstatement" ):
                return visitor.visitBreakstatement(self)
            else:
                return visitor.visitChildren(self)




    def breakstatement(self):

        localctx = D96Parser.BreakstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_breakstatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(D96Parser.BREAKTYPE)
            self.state = 164
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinuestatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUETYPE(self):
            return self.getToken(D96Parser.CONTINUETYPE, 0)

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_continuestatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinuestatement" ):
                return visitor.visitContinuestatement(self)
            else:
                return visitor.visitChildren(self)




    def continuestatement(self):

        localctx = D96Parser.ContinuestatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_continuestatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(D96Parser.CONTINUETYPE)
            self.state = 167
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnstatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURNTYPE(self):
            return self.getToken(D96Parser.RETURNTYPE, 0)

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def exp(self):
            return self.getTypedRuleContext(D96Parser.ExpContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_returnstatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnstatement" ):
                return visitor.visitReturnstatement(self)
            else:
                return visitor.visitChildren(self)




    def returnstatement(self):

        localctx = D96Parser.ReturnstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnstatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(D96Parser.RETURNTYPE)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.INT) | (1 << D96Parser.FLOAT) | (1 << D96Parser.STRING) | (1 << D96Parser.NULLTYPE) | (1 << D96Parser.TRUETYPE) | (1 << D96Parser.FALSETYPE) | (1 << D96Parser.ARRAYTYPE) | (1 << D96Parser.NEW) | (1 << D96Parser.SELFTYPE) | (1 << D96Parser.SUB) | (1 << D96Parser.NOT) | (1 << D96Parser.LB) | (1 << D96Parser.ID))) != 0):
                self.state = 170
                self.exp()


            self.state = 173
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvokemethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def exp9(self):
            return self.getTypedRuleContext(D96Parser.Exp9Context,0)


        def DOT(self):
            return self.getToken(D96Parser.DOT, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def paramexp(self):
            return self.getTypedRuleContext(D96Parser.ParamexpContext,0)


        def TWOCOLON(self):
            return self.getToken(D96Parser.TWOCOLON, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def partinvoke(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.PartinvokeContext)
            else:
                return self.getTypedRuleContext(D96Parser.PartinvokeContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_invokemethod

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvokemethod" ):
                return visitor.visitInvokemethod(self)
            else:
                return visitor.visitChildren(self)




    def invokemethod(self):
